CHATS_SIT/force-app/main/default/objects/T_FISCAL_RATE__c/T_FISCAL_RATE__c.object-meta.xml
<CustomObject>
    <label>Rate</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>