CHATS_SIT/force-app/main/default/objects/T_FISCAL_RATE__c/fields/AMT_CTY__c.field-meta.xml
<CustomField>
    <fullName>AMT_CTY__c</fullName>
    <label>County Ceiling Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>