CHATS_SIT/force-app/main/default/objects/T_FISCAL_RATE__c/fields/CDE_AGE_GROUP__c.field-meta.xml
<CustomField>
    <fullName>CDE_AGE_GROUP__c</fullName>
    <description>Age Group</description>
    <label>Age Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>R00710</valueSetName>
    </valueSet>
</CustomField>