CHATS_SIT/force-app/main/default/objects/T_FISCAL_RATE__c/fields/CDE_CARE_UNIT__c.field-meta.xml
<CustomField>
    <fullName>CDE_CARE_UNIT__c</fullName>
    <description>Care Unit</description>
    <label>Care Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>R00715</valueSetName>
    </valueSet>
</CustomField>