CHATS_SIT/force-app/main/default/objects/T_FISCAL_RATE__c/fields/CDE_RATE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CDE_RATE_TYPE__c</fullName>
    <description>Rate Type</description>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>R00751</valueSetName>
    </valueSet>
</CustomField>