CHATS_SIT/force-app/main/default/objects/T_FISCAL_RATE__c/fields/IDN_FISCAL_SCH__c.field-meta.xml
<CustomField>
    <fullName>IDN_FISCAL_SCH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fiscal Rate Schedule</label>
    <referenceTo>T_FISCAL_SCH__c</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <type>Lookup</type>
</CustomField>