CHATS_SIT/force-app/main/default/objects/T_FISCAL_RATE__c/fields/Rate_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Rate_Schedule__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate Schedule</label>
    <length>18</length>
    <type>Text</type>
</CustomField>